--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,32 @@ version: '3'
 
 services:
   zookeeper:
-    image: zookeeper
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
     ports: 
       - 2181:2181
 
   kafka:
-    image: ches/kafka
+    image: wurstmeister/kafka:0.10.2.1
+    container_name: kafka
+    hostname: kafka    
     links:
       - zookeeper
     ports:
       - 9092:9092
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
-      ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      CREATE_KAFKA_TOPICS: "test:1:1"
     volumes:
-      - kafka-data:/data
-      - kafka-logs:/logs
+      - dataKafka:/var/lib/kafka
+      - /var/run/docker.sock:/var/run/docker.sock
 
   sparkmaster:
     image: gettyimages/spark
     command: bin/spark-class org.apache.spark.deploy.master.Master -h sparkmaster
     hostname: sparkmaster
+    container_name: sparkmaster
     environment:
       MASTER: spark://sparkmaster:7077
       SPARK_CONF_DIR: /conf
@@ -45,13 +50,14 @@ services:
       - 7077:7077
       - 8080:8080
     volumes:
-      - confMaster:/conf
-      - masterData:/tmp/data
+      - ./conf/master:/conf
+      - dataSparkmaster:/tmp/data
 
   sparkworker:
     image: gettyimages/spark
     command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://sparkmaster:7077
     hostname: sparkworker
+    container_name: sparkworker
     environment:
       SPARK_CONF_DIR: /conf
       SPARK_WORKER_CORES: 2
@@ -73,13 +79,10 @@ services:
     ports:
       - 8081:8081
     volumes:
-      - confWorker:/conf
-      - workerData:/tmp/data
+      - ./conf/worker:/conf
+      - dataSparkworker:/tmp/data
 
 volumes:
-  kafka-data:
-  kafka-logs:
-  confMaster:
-  masterData:
-  confWorker:
-  workerData:
+  dataKafka:
+  dataSparkmaster:
+  dataSparkworker:
